# JupyterReview

./: README.md  pyproject.toml
jupyterreview/: 01 - Introduction.ipynb  02 - Basics.ipynb  03 - Dataframes.ipynb  04 - Reading Data.ipynb  05 - Cleaning Data.ipynb  06 - Filtering Data.ipynb  07 - Processing Data.ipynb  08 - Outputing Data.ipynb  09 - Coding Strategies.ipynb  10 - Misc Notes.ipynb  11 - Appendix A.ipynb
jupyterreview/data/: cleaning_example_01.csv
