[tool.poetry]
name = "jupyterreview"
version = "0.1.0"
description = ""
authors = ["Guy Oliver <guy.oliver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.6"
jupyter = "^1.0.0"
notebook = "^7.0.6"
jupyterlab = "^4.0.9"
pandas = "^2.1.4"
numpy = "^1.26.2"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
sqlalchemy = "^2.0.23"
openpyxl = "^3.1.2"
pyarrow = "^14.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
